--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,6 +30,14 @@ main {
   border: none;
   color: #fff;
 }
+.btn-primary:hover,
+.btn.btn-primary:focus {
+  box-shadow: none !important;
+  background-color: black;
+
+  transition: all 0.3s ease;
+}
+
 .products {
   display: flex;
   flex-wrap: wrap;
