--- a/client/src/index.css
+++ b/client/src/index.css
@@ -68,3 +68,8 @@ main {
 .img-thumbnail {
   height: 80px;
 }
+
+/* ----------SigninScreen----------- */
+.small-container {
+  max-width: 600px;
+}
