--- a/client/src/index.css
+++ b/client/src/index.css
@@ -58,7 +58,13 @@ main {
 .product-info {
   padding: 1rem;
 }
-
+.text-link {
+  color: inherit;
+  text-decoration: none;
+}
+.text-link:hover {
+  color: #5a5a5a;
+}
 /* ---------- ProductScreen ----------- */
 .img-large {
   max-width: 100%;
